@@ -1031,7 +1031,7 @@ LISTFILE=/resources/lists.ini
 # Other flags include EXECUTIONS, LOGINS, LOGOFFS, BIRTHS, MARRIAGES, 
 # DIVORCES, CHRISTENINGS, LEVELS, DETAILEDLEVELS, DEATHS, DETAILEDDEATHS,
 # CONQUESTS, CONCEPTIONS, NEWPLAYERS, LOSTLEVELS, PLAYERPURGES, CLANINFO,
-# WARRANTS
+# WARRANTS, or the names of any colors to override the default
 # All of the above flags cause those events to be automatically
 # broadcast on the given channel.
 CHANNELS=\
