@@ -1088,16 +1088,19 @@ public final class IMC2Driver extends Thread {
 		if(channelName.length()==0) return;
 		int channelInt=CMLib.channels().getChannelIndex(channelName);
 		if(channelInt<0) return;
+        String channelColor=CMLib.channels().getChannelColorOverride(channelInt);
+        if(channelColor.length()==0)
+        	channelColor="^Q";
         MOB mob=CMClass.getMOB("StdMOB");
         mob.setName(from);
         mob.setLocation(CMClass.getLocale("StdRoom"));
-		String str="^Q^<CHANNEL \""+channelName+"\"^>"+mob.name()+" "+channelName+"(S) '"+text+"'^</CHANNEL^>^N^.";
+		String str=channelColor+"^<CHANNEL \""+channelName+"\"^>"+mob.name()+" "+channelName+"(S) '"+text+"'^</CHANNEL^>^N^.";
 		if(emote>0) 
 		{
 			if(emote==1)
-				str="^Q^<CHANNEL \""+channelName+"\"^>["+channelName+"] "+from+" "+text+"^</CHANNEL^>^N^.";
+				str=channelColor+"^<CHANNEL \""+channelName+"\"^>["+channelName+"] "+from+" "+text+"^</CHANNEL^>^N^.";
 			else
-				str="^Q^<CHANNEL \""+channelName+"\"^>["+channelName+"] "+text+"^</CHANNEL^>^N^.";
+				str=channelColor+"^<CHANNEL \""+channelName+"\"^>["+channelName+"] "+text+"^</CHANNEL^>^N^.";
 		}
 				
 		msg=CMClass.getMsg(mob,null,null,CMMsg.NO_EFFECT,null,CMMsg.NO_EFFECT,null,CMMsg.MASK_CHANNEL|(CMMsg.TYP_CHANNEL+channelInt),str);
