@@ -2332,3 +2332,4 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 4. Generic Languages can now be created online and within the MUDGrinder.  See Builders Guide.
 5. Generic Crafting Skills can now be created online and within the MUDGrinder. See Builders Guide.  
 6. All-Qualifys list can now be modified from MUDGrinder and Command Line. See Builders Guide.
+7. Channels definition in coffeemud.ini file can now include override color codes for each channel.
